--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 dynamic = ["version"]
 dependencies = [
     # "frappe~=15.0.0" # Installed and managed by bench.
-    "pywce"
+    "pywce @ git+https://github.com/DonnC/pywce.git@sync"
 ]
 
 [build-system]
