--- a/frappe_pywce/frappe_pywce/doctype/pywceconfig/pywceconfig.json
+++ b/frappe_pywce/frappe_pywce/doctype/pywceconfig/pywceconfig.json
@@ -14,8 +14,10 @@
   "webhook_token",
   "template_settings_section",
   "initial_stage",
+  "expiry",
   "column_break_qzil",
-  "process_in_background"
+  "process_in_background",
+  "wa_id_same_mobile"
  ],
  "fields": [
   {
@@ -57,7 +59,7 @@
   {
    "fieldname": "template_settings_section",
    "fieldtype": "Section Break",
-   "label": "Template Settings"
+   "label": "General Settings"
   },
   {
    "fieldname": "initial_stage",
@@ -73,10 +75,25 @@
   },
   {
    "default": "1",
-   "description": "handle every webhook requests in the background<br>\nUsing: <b><i>frappe.enqueue</i></b>",
+   "description": "handle every webhook request in the background",
    "fieldname": "process_in_background",
    "fieldtype": "Check",
    "label": "Handle in background?"
+  },
+  {
+   "default": "10",
+   "description": "In mins",
+   "fieldname": "expiry",
+   "fieldtype": "Int",
+   "label": "Login expire after?",
+   "non_negative": 1
+  },
+  {
+   "default": "1",
+   "description": "On login, ensure wa_id == user account mobile no.",
+   "fieldname": "wa_id_same_mobile",
+   "fieldtype": "Check",
+   "label": "Validate wa_id with user mobile?"
   }
  ],
  "grid_page_length": 50,
@@ -84,7 +101,7 @@
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-04-05 13:12:56.149663",
+ "modified": "2025-04-11 14:43:04.707045",
  "modified_by": "Administrator",
  "module": "Frappe Pywce",
  "name": "PywceConfig",
