--- a/frappe_pywce/frappe_pywce/doctype/pywceconfig/pywceconfig.json
+++ b/frappe_pywce/frappe_pywce/doctype/pywceconfig/pywceconfig.json
@@ -15,10 +15,14 @@
   "template_settings_section",
   "site",
   "initial_stage",
-  "expiry",
   "column_break_qzil",
   "process_in_background",
-  "wa_id_same_mobile"
+  "login_settings_section",
+  "login_enabled",
+  "logged_in_stage_menu",
+  "column_break_hwhz",
+  "wa_id_same_mobile",
+  "expiry"
  ],
  "fields": [
   {
@@ -102,6 +106,29 @@
    "in_list_view": 1,
    "label": "Site",
    "read_only": 1
+  },
+  {
+   "fieldname": "login_settings_section",
+   "fieldtype": "Section Break",
+   "label": "Login Settings"
+  },
+  {
+   "default": "0",
+   "description": "check if chatbot processes user login",
+   "fieldname": "login_enabled",
+   "fieldtype": "Check",
+   "label": "Login enabled?"
+  },
+  {
+   "fieldname": "column_break_hwhz",
+   "fieldtype": "Column Break"
+  },
+  {
+   "fieldname": "logged_in_stage_menu",
+   "fieldtype": "Link",
+   "label": "Logged in stage menu",
+   "mandatory_depends_on": "eval:doc.login_enabled==1;",
+   "options": "Chatbot Template"
   }
  ],
  "grid_page_length": 50,
@@ -109,7 +136,7 @@
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-04-12 17:29:03.198232",
+ "modified": "2025-04-14 15:59:46.934845",
  "modified_by": "Administrator",
  "module": "Frappe Pywce",
  "name": "PywceConfig",
