--- a/frappe_pywce/frappe_pywce/doctype/pywceconfig/pywceconfig.json
+++ b/frappe_pywce/frappe_pywce/doctype/pywceconfig/pywceconfig.json
@@ -13,16 +13,13 @@
   "app_secret",
   "webhook_token",
   "template_settings_section",
-  "site",
   "initial_stage",
-  "column_break_qzil",
   "process_in_background",
   "login_settings_section",
   "login_enabled",
   "logged_in_stage_menu",
   "column_break_hwhz",
-  "wa_id_same_mobile",
-  "expiry"
+  "wa_id_same_mobile"
  ],
  "fields": [
   {
@@ -32,8 +29,7 @@
   },
   {
    "fieldname": "access_token",
-   "fieldtype": "Password",
-   "in_list_view": 1,
+   "fieldtype": "Small Text",
    "label": "Access Token",
    "reqd": 1
   },
@@ -75,10 +71,6 @@
    "reqd": 1
   },
   {
-   "fieldname": "column_break_qzil",
-   "fieldtype": "Column Break"
-  },
-  {
    "default": "1",
    "description": "handle every webhook request in the background",
    "fieldname": "process_in_background",
@@ -86,26 +78,11 @@
    "label": "Handle in background?"
   },
   {
-   "default": "10",
-   "description": "In mins",
-   "fieldname": "expiry",
-   "fieldtype": "Int",
-   "label": "Login expire after?",
-   "non_negative": 1
-  },
-  {
    "default": "1",
    "description": "On login, ensure wa_id == user account mobile no.",
    "fieldname": "wa_id_same_mobile",
    "fieldtype": "Check",
    "label": "Validate wa_id with user mobile?"
-  },
-  {
-   "fieldname": "site",
-   "fieldtype": "Data",
-   "in_list_view": 1,
-   "label": "Site",
-   "read_only": 1
   },
   {
    "fieldname": "login_settings_section",
@@ -136,7 +113,7 @@
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-04-14 15:59:46.934845",
+ "modified": "2025-08-17 19:27:59.039216",
  "modified_by": "Administrator",
  "module": "Frappe Pywce",
  "name": "PywceConfig",
@@ -153,6 +130,7 @@
    "write": 1
   }
  ],
+ "row_format": "Dynamic",
  "sort_field": "modified",
  "sort_order": "DESC",
  "states": []
