--- a/frappe_pywce/frappe_pywce/doctype/chatbot_config/chatbot_config.json
+++ b/frappe_pywce/frappe_pywce/doctype/chatbot_config/chatbot_config.json
@@ -1,27 +1,30 @@
 {
  "actions": [],
- "allow_copy": 1,
  "allow_rename": 1,
  "creation": "2025-03-19 22:00:48.366375",
  "doctype": "DocType",
  "engine": "InnoDB",
  "field_order": [
   "whatsapp_settings_section",
-  "access_token",
+  "chatbot_mobile_number",
   "phone_id",
+  "webhook_token",
   "column_break_vxfw",
   "app_secret",
-  "webhook_token",
+  "access_token",
   "template_settings_section",
-  "initial_stage",
+  "chatbot_name",
+  "env",
+  "column_break_irie",
   "process_in_background",
-  "column_break_najv",
-  "report_stage",
+  "btn_launch_emulator",
   "login_settings_section",
   "login_enabled",
-  "logged_in_stage_menu",
   "column_break_hwhz",
-  "wa_id_same_mobile"
+  "wa_id_same_mobile",
+  "validate_webhook_payload",
+  "flow_builder_settings_section",
+  "flow_json"
  ],
  "fields": [
   {
@@ -65,15 +68,7 @@
    "label": "General Settings"
   },
   {
-   "fieldname": "initial_stage",
-   "fieldtype": "Link",
-   "in_list_view": 1,
-   "label": "Initial Stage",
-   "options": "Chatbot Template",
-   "reqd": 1
-  },
-  {
-   "default": "1",
+   "default": "0",
    "description": "handle every webhook request in the background",
    "fieldname": "process_in_background",
    "fieldtype": "Check",
@@ -89,7 +84,7 @@
   {
    "fieldname": "login_settings_section",
    "fieldtype": "Section Break",
-   "label": "Login Settings"
+   "label": "Security Settings"
   },
   {
    "default": "0",
@@ -103,32 +98,64 @@
    "fieldtype": "Column Break"
   },
   {
-   "fieldname": "logged_in_stage_menu",
-   "fieldtype": "Link",
-   "label": "Logged in stage menu",
-   "mandatory_depends_on": "eval:doc.login_enabled==1;",
-   "options": "Chatbot Template"
+   "fieldname": "chatbot_mobile_number",
+   "fieldtype": "Phone",
+   "label": "ChatBot Mobile Number",
+   "reqd": 1
   },
   {
-   "fieldname": "report_stage",
-   "fieldtype": "Link",
-   "label": "Report Stage",
-   "options": "Chatbot Template"
+   "fieldname": "chatbot_name",
+   "fieldtype": "Data",
+   "label": "ChatBot Name"
   },
   {
-   "fieldname": "column_break_najv",
+   "fieldname": "column_break_irie",
    "fieldtype": "Column Break"
+  },
+  {
+   "default": "local",
+   "fieldname": "env",
+   "fieldtype": "Select",
+   "label": "Environment",
+   "options": "local\ntest\nlive"
+  },
+  {
+   "depends_on": "eval:doc.env === 'local'",
+   "description": "opens local whatsapp emulator page",
+   "fieldname": "btn_launch_emulator",
+   "fieldtype": "Button",
+   "label": "Launch Emulator"
+  },
+  {
+   "default": "1",
+   "fieldname": "validate_webhook_payload",
+   "fieldtype": "Check",
+   "label": "Validate Webhook Payload?"
+  },
+  {
+   "collapsible": 1,
+   "fieldname": "flow_builder_settings_section",
+   "fieldtype": "Section Break",
+   "label": "Flow Builder Settings",
+   "read_only": 1
+  },
+  {
+   "fieldname": "flow_json",
+   "fieldtype": "JSON",
+   "label": "Flow JSON",
+   "print_hide": 1,
+   "read_only": 1,
+   "report_hide": 1
   }
  ],
  "grid_page_length": 50,
- "hide_toolbar": 1,
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-08-18 16:15:40.731540",
+ "modified": "2025-11-12 11:52:34.249914",
  "modified_by": "Administrator",
  "module": "Frappe Pywce",
- "name": "PywceConfig",
+ "name": "ChatBot Config",
  "owner": "Administrator",
  "permissions": [
   {
@@ -145,5 +172,6 @@
  "row_format": "Dynamic",
  "sort_field": "modified",
  "sort_order": "DESC",
- "states": []
+ "states": [],
+ "track_changes": 1
 }
