--- a/studio/tsconfig.json
+++ b/studio/tsconfig.json
@@ -10,7 +10,15 @@
     "noUnusedParameters": false,
     "skipLibCheck": true,
     "allowJs": true,
+    "checkJs": true,
     "noUnusedLocals": false,
     "strictNullChecks": false
-  }
+  },
+  "include": [
+    "src/**/*",
+    "src/index.ts",
+    "vitest.config.ts",
+    "vite-plugin/**/*.d.ts",
+    "frappe_pywce/studio/vite-plugin/**/*.d.ts"
+  ],
 }
